<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    tools:context="br.com.vostre.circular.admin.MainActivity"
    tools:ignore="MergeRootFrame"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    style="@style/background_principal">

    <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/branco"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:text="@string/titulo_topo_main" />

            <!--<ImageView-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingTop="2dp"-->
                <!--android:paddingBottom="2dp"-->
                <!--android:src="@drawable/logo_2016"/>-->

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:weightSum="7">

            <Button
                android:textAllCaps="false"
                style="@style/BotoesMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_itinerarios"
                android:id="@+id/btnItinerarios"
                android:drawablePadding="10dp"
                android:paddingLeft="25dp"
                android:gravity="left|center_vertical"
                android:layout_weight="1" />

            <Button
                android:textAllCaps="false"
                style="@style/BotoesMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_paradas"
                android:id="@+id/btnParadas"
                android:drawablePadding="10dp"
                android:paddingLeft="25dp"
                android:gravity="left|center_vertical"
                android:layout_weight="1" />

            <Button
                android:textAllCaps="false"
                style="@style/BotoesMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_mensagens"
                android:id="@+id/btnMensagens"
                android:drawablePadding="10dp"
                android:paddingLeft="25dp"
                android:gravity="left|center_vertical"
                android:layout_weight="1" />

            <Button
                android:textAllCaps="false"
                style="@style/BotoesMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_empresas"
                android:id="@+id/btnEmpresas"
                android:drawablePadding="10dp"
                android:paddingLeft="25dp"
                android:gravity="left|center_vertical"
                android:layout_weight="1" />

            <Button
                android:textAllCaps="false"
                style="@style/BotoesMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_estados"
                android:id="@+id/btnEstados"
                android:drawablePadding="10dp"
                android:paddingLeft="25dp"
                android:gravity="left|center_vertical"
                android:layout_weight="1" />

            <Button
                android:textAllCaps="false"
                style="@style/BotoesMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_locais"
                android:id="@+id/btnLocais"
                android:drawablePadding="10dp"
                android:paddingLeft="25dp"
                android:gravity="left|center_vertical"
                android:layout_weight="1" />

            <Button
                android:textAllCaps="false"
                style="@style/BotoesMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_bairros"
                android:id="@+id/btnBairros"
                android:drawablePadding="10dp"
                android:paddingLeft="25dp"
                android:gravity="left|center_vertical"
                android:layout_weight="1" />

            <Button
                android:textAllCaps="false"
                style="@style/BotoesMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_paises"
                android:id="@+id/btnPaises"
                android:drawablePadding="10dp"
                android:paddingLeft="25dp"
                android:gravity="left|center_vertical"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:text="Desenvolvido por"
                />
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:src="@drawable/logo_vostre_branca_2015"
                android:layout_weight="1"
                android:layout_margin="10dp" />

        </LinearLayout>
    </LinearLayout>

    <!--<android.support.design.widget.NavigationView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="start"-->
        <!--android:fitsSystemWindows="true"-->
        <!--android:id="@+id/nav"-->
        <!--app:headerLayout="@layout/drawer_header"-->
        <!--app:menu="@menu/drawer"/>-->

</android.support.v4.widget.DrawerLayout>